--- a/ionic-basic/package.json
+++ b/ionic-basic/package.json
@@ -1,3 +1,5 @@
+
+  
 {
   "name": "ionic-basic",
   "version": "0.0.1",
@@ -27,7 +29,9 @@
     "@ionic/angular": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.24.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.1",
@@ -35,7 +39,7 @@
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "13.0.4",
+    "@angular/cli": "~13.0.1",
     "@angular/compiler": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0",
     "@angular/language-service": "~13.0.0",
