--- a/ionic-basic/package.json
+++ b/ionic-basic/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@angular/common": "~13.0.0",
     "@angular/core": "~13.0.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
@@ -25,12 +26,15 @@
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
     "@ionic/angular": "^6.0.0",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.1",
+    "@angular-devkit/build-angular": "^13.3.1",
     "@angular-eslint/builder": "~13.0.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
