--- a/ionic-basic/package.json
+++ b/ionic-basic/package.json
@@ -30,7 +30,7 @@
     "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
+    "zone.js": "~0.11.4"
     
   },
   "devDependencies": {
