--- a/ionic-basic/package.json
+++ b/ionic-basic/package.json
@@ -22,7 +22,8 @@
     "@angular/router": "~13.0.0",
     "@awesome-cordova-plugins/firebase": "^5.40.0",
     "@capacitor/app": "1.1.0",
-    "@capacitor/core": "3.4.0",
+    "@capacitor/core": "^3.4.0",
+    "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
@@ -30,7 +31,7 @@
     "angularfire2": "^5.4.2",
     "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-firebase-authentication": "^5.1.0",
-    "firebase": "^9.6.9",
+    "firebase": "^9.8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -45,7 +46,7 @@
     "@angular/compiler": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0",
     "@angular/language-service": "~13.0.0",
-    "@capacitor/cli": "3.4.0",
+    "@capacitor/cli": "^3.4.0",
     "@ionic/angular-toolkit": "^5.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
