--- a/ionic-basic/package.json
+++ b/ionic-basic/package.json
@@ -22,12 +22,16 @@
     "@angular/router": "~13.0.0",
     "@awesome-cordova-plugins/firebase": "^5.40.0",
     "@capacitor/app": "1.1.0",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "^3.4.0",
+    "@capacitor/filesystem": "^1.1.0",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
+    "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "angularfire2": "^5.4.2",
     "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-firebase-authentication": "^5.1.0",
