--- a/ionic-basic/package.json
+++ b/ionic-basic/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@capacitor/camera": "^1.3.1",
+    "@capacitor/filesystem": "^1.1.0",
     "@capacitor/app": "1.1.0",
     "@capacitor/core": "^3.3.4",
     "@capacitor/geolocation": "^1.3.1",
@@ -27,11 +29,13 @@
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
     "@ionic/angular": "^6.0.0",
+    "@capacitor/storage": "^1.2.5",
     "angularfire2": "^5.4.2",
     "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@ionic/pwa-elements": "^3.1.1"
     
   },
   "devDependencies": {
