--- a/ionic-basic/capacitor.config.json
+++ b/ionic-basic/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "io.ionic.starter",
-	"appName": "ionic-basic",
-	"webDir": "www",
-	"bundledWebRuntime": false
+  "appId": "com.democapacitor.fcfm",
+  "appName": "ionic-basic",
+  "webDir": "www",
+  "bundledWebRuntime": false
 }
