--- a/ionic-basic/package.json
+++ b/ionic-basic/package.json
@@ -19,14 +19,20 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@awesome-cordova-plugins/camera": "^5.41.0",
     "@capacitor/app": "1.1.0",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "^3.4.0",
+    "@capacitor/filesystem": "^1.1.0",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
+    "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "angularfire2": "^5.4.2",
+    "cordova-plugin-camera": "^6.0.0",
     "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
