--- a/ionic-basic/package.json
+++ b/ionic-basic/package.json
@@ -19,24 +19,25 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "@awesome-cordova-plugins/camera": "^5.41.0",
+    "@awesome-cordova-plugins/camera": "^5.42.0",
+    "@capacitor/android": "^3.5.1",
     "@capacitor/app": "1.1.0",
     "@capacitor/camera": "^1.3.1",
-    "@capacitor/core": "^3.4.0",
+    "@capacitor/core": "^3.5.1",
     "@capacitor/filesystem": "^1.1.0",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
     "@capacitor/storage": "^1.2.5",
-    "@ionic/angular": "^6.0.0",
+    "@ionic/angular": "^6.1.6",
     "@ionic/pwa-elements": "^3.1.1",
     "angularfire2": "^5.4.2",
     "cordova-plugin-camera": "^6.0.0",
     "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.4.0",
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.1",
@@ -48,11 +49,11 @@
     "@angular/compiler": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0",
     "@angular/language-service": "~13.0.0",
-    "@capacitor/cli": "^3.4.0",
+    "@capacitor/cli": "^3.5.1",
     "@ionic/angular-toolkit": "^5.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.52",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.6.0",
@@ -61,11 +62,11 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "^6.3.20",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
