--- a/ionic-basic/package.json
+++ b/ionic-basic/package.json
@@ -19,22 +19,21 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "@capacitor/android": "3.4.0",
+    "@capacitor/android": "^3.5.1",
     "@capacitor/app": "1.1.0",
     "@capacitor/camera": "^1.3.1",
-    "@capacitor/core": "3.4.0",
+    "@capacitor/core": "^3.4.0",
     "@capacitor/filesystem": "^1.1.0",
     "@capacitor/geolocation": "^1.3.1",
-    "@capacitor/google-maps": "^1.0.0",
     "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "^3.5.1",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
     "@capacitor/storage": "^1.2.5",
-    "@firebase/firestore": "^3.4.9",
-    "@googlemaps/google-maps-services-js": "^3.3.14",
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
     "angularfire2": "^5.4.2",
+    "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -49,9 +48,8 @@
     "@angular/compiler": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0",
     "@angular/language-service": "~13.0.0",
-    "@capacitor/cli": "3.4.0",
+    "@capacitor/cli": "^3.4.0",
     "@ionic/angular-toolkit": "^5.0.0",
-    "@ionic/lab": "3.2.11",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
